# browsewake

./: .gitignore  Cargo.toml  LICENSE  README.md  SOURCES.md
src/: error.rs  lib.rs  main.rs  model.rs  output.rs
src/browser/: brave.rs  chrome.rs  firefox.rs  history_db.rs  mod.rs  paths.rs  safari.rs  snss.rs
