[package]
name = "browsewake"
version = "0.1.0"
edition = "2024"
description = "Export browser tabs and per-tab navigation history from Firefox, Chrome, and Safari"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
thiserror = "2"
glob = "0.3"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
