[package]
name = "browsewake"
version = "0.4.0"
edition = "2024"
description = "Export browser tabs and per-tab navigation history from Firefox, Chrome, Brave, and Safari"
repository = "https://github.com/herreio/browsewake"
license = "MIT"
keywords = ["browser", "tabs", "history", "cli"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
thiserror = "2"
glob = "0.3"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
